# misis2023f-23-18-ryzhichkin-k-s

./: 0004a.cpp  0217a.cpp  0263a.cpp  0617a.cpp  0978a.cpp  1352a.cpp  1855a.cpp  1857a.cpp  1872b.cpp  CMakeLists.txt  README.md  cf_status.md  codeforces_tasks  status.md  wantToSolve :)  wantToSolve _)
.github/workflows/: cf_table.yml
prj.codeforces/: 0004a.cpp  0136b.cpp  0217a.cpp  0263a.cpp  0276a.cpp  0339b.cpp  0617a.cpp  0731a.cpp  0978a.cpp  0978b.cpp  1330a.cpp  1339a.cpp  1352a.cpp  1404a.cpp  1438a.cpp  1493a.cpp  1512b.cpp  1553a.cpp  1559a.cpp  1649a.cpp  1651a.cpp  1669d.cpp  1670b.cpp  1684b.cpp  1690d.cpp  1717b.cpp  1721b.cpp  1734b.cpp  1744c.cpp  1849a.cpp  1855a.cpp  1857a.cpp  1872a.cpp  1872b.cpp  1873c.cpp  1873d.cpp  284150b.cpp  339b.cpp  CMakeLists.txt
prj.lab/: CMakeLists.txt  complex-sample.cpp  complex.cpp
prj.lab/complex/: complex.cpp  complex.hpp
prj.lab/dynarr/: dynarr.cpp  dynarr.hpp
prj.lab/rational/: rational.cpp  rational.hpp
prj.test/: CMakeLists.txt  test_dynarr.cpp  test_rational.cpp
